<resources>
    <string name="app_name">Clean Architecture</string>
    <string name="clean_architecture">Clean Architecture</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="zipcode">zipcode</string>
    <string name="lastname">lastname</string>
    <string name="firstname">firstname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>