<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.cleanarchitecture.ui.fragment.login.viewmodel.LoginViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        tools:context=".ui.activity.login.LoginActivity">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_architecture"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_22sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_20dp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sp"
            app:layout_constraintTop_toBottomOf="@id/tvHeading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_80dp" />

        <EditText
            android:id="@+id/etSignInEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginTop="@dimen/_40dp"
            android:layout_marginEnd="@dimen/_40dp"
            android:background="@drawable/bg_rounded_gradiant_corner_tv"
            android:gravity="center"
            android:hint="@string/email"
            android:text="@={viewModel.email}"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin" />

        <EditText
            android:id="@+id/etSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_40dp"
            android:textColorHint="@color/black"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_40dp"
            android:textColor="@color/black"
            android:text="@={viewModel.password}"
            android:background="@drawable/bg_rounded_gradiant_corner_tv"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSignInEmail" />

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="@dimen/_120dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_40dp"
            android:background="@drawable/bg_button_cream"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:onClick="@{ () -> viewModel.onSignInClick()}"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSignInPassword" />

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:gravity="center"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:onClick="@{() -> viewModel.goToSignupPage()}"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

        <ProgressBar
            android:id="@+id/pbLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/white"
            android:progressBackgroundTint="@color/white"
            android:foregroundTint="@color/white"
            android:progressDrawable="@color/white"
            android:visibility="@{viewModel.loader ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>