<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cleanarchitecture.ui.fragment.signup.viewmodel.SignUpViewModel" />

        <variable
            name="appConstant"
            type="com.cleanarchitecture.utils.AppConstants" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        tools:context=".ui.activity.login.LoginActivity">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/clean_architecture"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sp"
            android:autofillHints="name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_80dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeading" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginTop="@dimen/_40dp"
            android:layout_marginEnd="@dimen/_40dp"
            android:background="@drawable/bg_rounded_gradiant_corner_tv"
            android:gravity="center"
            android:hint="@string/firstname"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_40dp"
            android:background="@drawable/bg_rounded_gradiant_corner_tv"
            android:gravity="center"
            android:hint="@string/lastname"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etFirstName" />

        <EditText
            android:id="@+id/etZipCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_40dp"
            android:background="@drawable/bg_rounded_gradiant_corner_tv"
            android:gravity="center"
            android:hint="@string/zipcode"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLastName" />

        <EditText
            android:id="@+id/etSignInEmail"
            error="@{appConstant.emailErrorMessage}"
            errorVisible="@{viewModel.emailError}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_40dp"
            android:background="@drawable/bg_rounded_gradiant_corner_tv"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5dp"
            android:text="@={viewModel.email}"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etZipCode" />

        <EditText
            android:id="@+id/etSignInPassword"
            error="@{appConstant.passwordErrorMessage}"
            errorVisible="@{viewModel.passwordError}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_40dp"
            android:background="@drawable/bg_rounded_gradiant_corner_tv"
            android:gravity="center"
            android:hint="@string/password"
            android:text="@={viewModel.password}"
            android:inputType="textPassword"
            android:padding="@dimen/_5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSignInEmail" />

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="@dimen/_120dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_40dp"
            android:background="@drawable/bg_button_cream"
            android:gravity="center"
            android:onClick="@{()->viewModel.onClickOfSignUp()}"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSignInPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>